# Ralloc_2.0

./: CMakeLists.txt  build.sh
gui/: brightness_control.py  dashboard.py
include/: logger.h  memory_manager.h  performance_analyzer.h  process_manager.h  scheduler.h
src/analytics/: performance_analyzer.cpp
src/logger/: logger.cpp
src/memory/: memory_manager.cpp
src/scheduler/: process_manager.cpp  scheduler.cpp  scheduler_binding.cpp
tests/: test_scheduler.cpp
